--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Registrasi Way Finder - KTM MM Jakarta</title>
@@ -11,6 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/all.min.css">
+
 	</head>
 	<body class="is-preload">
 		<!-- Header -->
@@ -25,6 +22,20 @@
 							<li><a href="#about" class="scrolly">About Us</a></li>
 							<li><a href="#register" class="scrolly">Register</a></li>
 						</ul>
+						<div class="nav-footer">
+							<p>Connect with us:</p>
+							<div class="social-icons">
+								<a href="https://www.instagram.com/ktmmmjkt" target="_blank">
+									<i class="fab fa-instagram"></i>
+								</a>
+								<a href="https://www.holytrinitycarmel.com" target="_blank">
+									<i class="fab fa-chrome"></i>
+								</a>
+								<a href="https://www.instagram.com/b2bktmjkt" target="_blank">
+									<i class="fab fa-instagram"></i>
+								</a>
+							</div>
+						</div>
 					</nav>
 					<div id="overlay"></div>
 				</div>
@@ -59,9 +70,6 @@
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-										<!-- <header>
-											<h3>Praise and Worship</h3>
-										</header> -->
 									</article>
 									<article class="item">
 										<a class="image fit"><img src="images/pic03.jpg" alt="" /></a>
@@ -74,12 +82,12 @@
 									<article class="item">
 										<a class="image fit"><img src="images/pic-04.png" alt="" /></a>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Mini Talkshow</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -107,8 +115,8 @@
 							<header>
 								<h2>Apa itu B2B KTM Muda Mudi Jakarta?</h2>
 							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+<!-- 
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
 							<p>Event eksternal yang diadakan oleh Komunitas Tritunggal Mahakudus Distrik Muda Mudi Jakarta sejak tahun 2012.
 								Event ini diadakan karena kami telah merasakan sendiri berkat dan cinta kasih dari Tuhan, sehingga kami pun ingin
@@ -129,7 +137,7 @@
 
 							<p>Agar kami dapat mengenalmu, yuk silahkan isi terlebih dahulu formulir dibawah ini!</p>
 
-							<form method="post" id="registrationForm">
+							<form action="#" id="registrationForm">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" id="name" placeholder="Masukan Nama Lengkap" required
 										oninvalid="this.setCustomValidity('Silahkan masukan nama lengkap anda!')"
@@ -162,22 +170,46 @@
 											<option value="Jakarta Timur">Jakarta Timur</option>
 											<option value="Jakarta Utara">Jakarta Utara</option>
 											<option value="Jakarta Selatan">Jakarta Selatan</option>
+											<option value="Tangerang">Tangerang</option>
+											<option value="Bekasi">Bekasi</option>
 										</select>
 									</div>
 									<div class="col-6 col-12-mobile">
 										<select name="member" id="member" required class="wizard-required" 
 										oninvalid="this.setCustomValidity('Silahkan pilih jenis keanggotaan anda!')"
 										oninput="this.setCustomValidity('')">
-											<option value="" disabled selected>-- Sudah Join KTM? --</option>
+											<option value="" disabled selected>-- Sudah Join KTM ? --</option>
 											<option value="Belum Bergabung KTM">Belum Bergabung KTM</option>
 											<option value="Sudah Bergabung KTM">Sudah Bergabung KTM</option>
 										</select>
 									</div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Tuliskan Harapanmu!"></textarea>
+									<div class="col-6 col-12-mobile">
+										<select name="media" id="media" required class="wizard-required"
+										oninvalid="this.setCustomValidity('Silahkan pilih sumber informasi!')"
+										oninput="this.setCustomValidity('')">
+											<option value="" disabled selected>-- Mengetahui Acara B2B 2025 Dari ? --</option>
+											<option value="Sosial Media">Sosial Media</option>
+											<option value="Keluarga/Kerabat">Keluarga/Kerabat</option>
+											<option value="Camping Rohani">Camping Rohani</option>
+											<option value="Sel KTM">Sel KTM</option>
+										</select>
 									</div>
+									<div class="col-6 col-12-mobile">
+										<select name="camping" id="camping" required class="wizard-required"
+										oninvalid="this.setCustomValidity('Silahkan pilih sumber informasi!')"
+										oninput="this.setCustomValidity('')">
+											<option value="" disabled selected>-- Pernah Ikut Camping Rohani ? --</option>
+											<option value="Pernah di Cikanyere">Pernah di Cikanyere</option>
+											<option value="Pernah di Tumpang">Pernah di Tumpang</option>
+											<option value="Pernah di Bandol">Pernah di Bandol</option>
+											<option value="Belum Pernah">Belum Pernah</option>
+										</select>
+									</div>
+									<!-- <div class="col-12">
+										<textarea name="message" placeholder="Tuliskan Harapanmu!"></textarea>
+									</div> -->
 									<div class="col-12">
-										<input type="submit" value="KIRIM PENDAFTARAN" />
+										<input type="submit" class="form-submit" id="form-submit" value="KIRIM PENDAFTARAN" />
 									</div>
 								</div>
 							</form>
@@ -206,5 +238,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/register.js"></script>
+			<script src="assets/js/sweet-alert/sweetalert2@11.js"></script>
 	</body>
 </html>
