Update 08 July 2025 Batch II

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				<div class="footer-container">
 					<!-- Kontak -->
 					<div class="footer-section">
-						<h3>Kontak</h3>
+						<h3>Hubungi Kami</h3>
 						<ul class="contact-list">
 							<li>
 								<i class="fab fa-whatsapp"></i>
@@ -261,7 +261,7 @@
 					</div>
 					<!-- Penyelenggara -->
 					<div class="footer-section">
-						<h3>Penyelenggara</h3>
+						<h3>Diselenggarakan Oleh</h3>
 						<div class="logo-grid">
 							<img src="images/logo/logo_paj.jpg" alt="Logo 1">
 							<img src="images/logo/logo_atma_jaya.png" alt="Logo 2">
