Update font peace sans

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="assets/css/all.min.css">
 
 		<!-- Font Peace Sans -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dharmatype/Peace-Sans@latest/PeaceSans.ttf" type="font/ttf">
+		<link rel="stylesheet" href="assets/css/fonts/peace_sans/PeaceSans.ttf" type="font/ttf">
 	</head>
 	<body class="is-preload">
 		<!-- Header -->
