Update link wa me

--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
 							<li>
 								<i class="fab fa-whatsapp"></i>
 								<strong>Kak Berlyn :</strong> 
-								<a href="https://wa.me/081225380545">
+								<a href="https://wa.me/6281225380545?text=Halo%20kak%20saya%20mau%20bertanya%20tentang%20Way%20Finder">
 									081225380545
 								</a></li>
 							<li>
 								<i class="fab fa-whatsapp"></i>
 								<strong>Kak Gita :</strong>
-								<a href="https://wa.me/081297059078">
+								<a href="https://wa.me/6281297059078?text=Halo%20kak%20saya%20mau%20bertanya%20tentang%20Way%20Finder">
 									081297059078
 								</a></li>
 							<li>
