Tambahan media pengumuman

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 											<option value="Keluarga/Kerabat">Keluarga/Kerabat</option>
 											<option value="Camping Rohani">Camping Rohani</option>
 											<option value="Sel KTM">Komunitas Rohani</option>
+											<option value="Pengumuman di Gereja">Pengumuman di Gereja</option>
 										</select>
 									</div>
 									<div class="col-6 col-12-mobile">
